--- a/weight-date.ipynb
+++ b/weight-date.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "76a58bb9",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "5274adbb",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "91c2b84d",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "22          232.8    2020-10-14  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "11049317",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "Name: date_measured, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,14 +360,14 @@
     "# cast 'date_measured' data as datetime\n",
     "# sort dataframe in-place by 'date_measured'\n",
     "\n",
-    "weightdate_df['date_measured'] = pd.to_datetime(weightdate_df['date_measured'])\n",
-    "weightdate_df.sort_values(by='date_measured', ascending = False, inplace = True)\n",
-    "weightdate_df['date_measured']"
+    "weightdate_df[\"date_measured\"] = pd.to_datetime(weightdate_df[\"date_measured\"])\n",
+    "weightdate_df.sort_values(by=\"date_measured\", ascending=False, inplace=True)\n",
+    "weightdate_df[\"date_measured\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "7a572d07",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
        "10          318.0    2018-05-25  2018      5   25  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,16 +696,16 @@
    "source": [
     "# extract 'year', 'month', and 'day' data into respective columns from 'date_measured' col\n",
     "\n",
-    "weightdate_df['year'] = weightdate_df['date_measured'].dt.year\n",
-    "weightdate_df['month'] = weightdate_df['date_measured'].dt.month\n",
-    "weightdate_df['day'] = weightdate_df['date_measured'].dt.day\n",
+    "weightdate_df[\"year\"] = weightdate_df[\"date_measured\"].dt.year\n",
+    "weightdate_df[\"month\"] = weightdate_df[\"date_measured\"].dt.month\n",
+    "weightdate_df[\"day\"] = weightdate_df[\"date_measured\"].dt.day\n",
     "\n",
     "weightdate_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "c6196aaa",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        },
        "data": [
         {
-         "hovertemplate": "date_measured=%{x}<br>weight_in_lbs=%{y}<extra></extra>",
+         "hovertemplate": "Date Measured=%{x}<br>Weight (lbs)=%{y}<extra></extra>",
          "legendgroup": "",
          "line": {
           "color": "#636efa",
@@ -726,7 +726,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "",
          "orientation": "v",
          "showlegend": false,
@@ -1606,7 +1606,7 @@
          }
         },
         "title": {
-         "text": "Tyler M. Neher Weights Over Time"
+         "text": "Tyler M. Neher - Measured Weight Over Time"
         },
         "xaxis": {
          "anchor": "y",
@@ -1615,7 +1615,7 @@
           1
          ],
          "title": {
-          "text": "date_measured"
+          "text": "Date Measured"
          }
         },
         "yaxis": {
@@ -1625,7 +1625,7 @@
           1
          ],
          "title": {
-          "text": "weight_in_lbs"
+          "text": "Weight (lbs)"
          }
         }
        }
@@ -1638,13 +1638,17 @@
    "source": [
     "# Generate plotly.express linechart of weights over time\n",
     "\n",
-    "fig = px.line(weightdate_df,\n",
-    "              x=weightdate_df['date_measured'],\n",
-    "              y=weightdate_df['weight_in_lbs'],\n",
-    "              title='Tyler M. Neher Weights Over Time',\n",
-    "              markers=True,\n",
-    "              render_mode='svg',\n",
-    "              )\n",
+    "names = {\"Date Measured\": \"date_measured\"}\n",
+    "\n",
+    "fig = px.line(\n",
+    "    weightdate_df,\n",
+    "    x=weightdate_df[\"date_measured\"],\n",
+    "    y=weightdate_df[\"weight_in_lbs\"],\n",
+    "    title=\"Tyler M. Neher - Measured Weight Over Time\",\n",
+    "    markers=True,\n",
+    "    render_mode=\"svg\",\n",
+    "    labels={\"date_measured\": \"Date Measured\", \"weight_in_lbs\": \"Weight (lbs)\"},\n",
+    ")\n",
     "fig.show()"
    ]
   }
