--- a/weight-date.ipynb
+++ b/weight-date.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "c6196aaa",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "",
          "orientation": "v",
          "showlegend": false,
@@ -1650,6 +1650,16 @@
     "    labels={\"date_measured\": \"Date Measured\", \"weight_in_lbs\": \"Weight (lbs)\"},\n",
     ")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f6cc5716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_html(\"index.html\")"
    ]
   }
  ],
